--- a/.github/workflows/poetry-version-patch.yml
+++ b/.github/workflows/poetry-version-patch.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with: fetch-depth: 0
+        with:
+        fetch-depth: 0
 
       - name: Set up Python & bump version
         run: |
