--- a/.github/workflows/poetry-version-patch.yml
+++ b/.github/workflows/poetry-version-patch.yml
@@ -1,14 +1,5 @@
-name: Bump and Tag Version on Main
-
 permissions:
   contents: write
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-    types: [closed]
 
 jobs:
   bump_and_tag:
@@ -24,24 +15,23 @@ jobs:
       - run: pip install poetry
         name: Install Poetry
 
-      - run: |
+      - name: Bump pyproject.toml version
+        run: |
           poetry version patch
           git config user.name "github-actions[bot]"
           git config user.email "[email protected]"
           git add pyproject.toml
           git commit -m "bump: patch version"
-        name: Bump patch version
 
-      - id: tag_version
+      - id: tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: patch
           release_branches: main
 
-      - name: Create GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+      - name: Push bump commit
+        run: git push origin main
+
+      - name: Push tag
+        run: git push origin ${{ steps.tag.outputs.new_tag }}
