--- a/.github/workflows/poetry-version-patch.yml
+++ b/.github/workflows/poetry-version-patch.yml
@@ -1,21 +1,34 @@
+name: Bump and Tag Patch on Main
+
 permissions:
   contents: write
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+    types:
+      - closed
+
 jobs:
   bump_and_tag:
-    runs-on: ubuntu-latest
     if: github.event_name == 'push' ||
         (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout full history
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - run: pip install poetry
-        name: Install Poetry
+      - name: Install Poetry
+        run: pip install poetry
 
-      - name: Bump pyproject.toml version
+      - name: Bump version in pyproject.toml
         run: |
           poetry version patch
           git config user.name "github-actions[bot]"
@@ -23,7 +36,8 @@ jobs:
           git add pyproject.toml
           git commit -m "bump: patch version"
 
-      - id: tag
+      - id: tag_version
+        name: Tag version automatically
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -34,4 +48,4 @@ jobs:
         run: git push origin main
 
       - name: Push tag
-        run: git push origin ${{ steps.tag.outputs.new_tag }}
+        run: git push origin "${{ steps.tag_version.outputs.new_tag }}"
