--- a/.github/workflows/poetry-version-patch.yml
+++ b/.github/workflows/poetry-version-patch.yml
@@ -27,24 +27,13 @@ jobs:
       - run: |
           poetry version patch
           git config user.name "github-actions[bot]"
-          git config user.email "[email protected]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add pyproject.toml
           git commit -m "bump: patch version"
         name: Bump patch version
 
-      - id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: patch
-          release_branches: main
-
-      - name: Create GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+      - name: Pull latest main with rebase
+        run: git pull --rebase origin main
 
       - name: Push bump commit
         run: git push origin main
